--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,10 +32,10 @@
         </activity>
         <activity
             android:name=".views.CadastroFuncionario"
-            android:parentActivityName=".views.CadastroActivity">
+            android:parentActivityName=".views.MenuActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".views.CadastroActivity" />
+                android:value=".views.MenuActivity" />
         </activity>
         <activity
             android:name=".views.MenuActivity"
@@ -44,19 +44,28 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.MainActivity" />
         </activity>
-        <activity android:name=".views.CadastroAdministrador"
+        <activity
+            android:name=".views.CadastroAdministrador"
             android:parentActivityName=".views.CadastroActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.CadastroActivity" />
         </activity>
-        <activity android:name=".views.CadastroAtividade"
+        <activity
+            android:name=".views.CadastroAtividade"
             android:parentActivityName=".views.MenuActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.MenuActivity" />
         </activity>
-        <activity android:name=".views.DuvidaActivity"
+        <activity
+            android:name=".views.DuvidaActivity"
+            android:parentActivityName=".views.MenuActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.MenuActivity" />
+        </activity>
+        <activity android:name=".views.TarefaActivity"
             android:parentActivityName=".views.MenuActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
