--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,12 +65,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.MenuActivity" />
         </activity>
-        <activity android:name=".views.TarefaActivity"
+        <activity
+            android:name=".views.TarefaActivity"
             android:parentActivityName=".views.MenuActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.MenuActivity" />
         </activity>
+        <activity android:name=".InfoDuvidaActivity" />
+        <activity android:name=".InfoTarefaActivity"></activity>
     </application>
 
 </manifest>
