--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,8 +72,39 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.MenuActivity" />
         </activity>
-        <activity android:name=".InfoDuvidaActivity" />
-        <activity android:name=".InfoTarefaActivity"></activity>
+        <activity
+            android:name=".views.InfoDuvidaActivity"
+            android:parentActivityName=".views.DuvidaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.DuvidaActivity" />
+        </activity>
+        <activity
+            android:name=".views.InfoTarefaActivity"
+            android:parentActivityName=".views.TarefaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.TarefaActivity" />
+        </activity>
+        <activity
+            android:name=".views.CadastroDuvida"
+            android:parentActivityName=".views.DuvidaActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.DuvidaActivity" />
+        </activity>
+        <activity android:name=".views.UsuarioActivity"
+            android:parentActivityName=".views.MenuActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.MenuActivity" />
+        </activity>
+        <activity android:name=".views.InfoUsuarioActivity"
+            android:parentActivityName=".views.UsuarioActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.UsuarioActivity" />
+        </activity>
     </application>
 
 </manifest>
