Iniciado implementação com hardware

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -115,9 +118,6 @@
                 android:value=".views.UsuarioActivity" />
         </activity>
 
-        <service
-            android:name=".services.AdicionarAdministrador"
-            android:exported="false"></service>
         <service
             android:name=".services.AdicionarAtividade"
             android:exported="false"></service>
