--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,25 +105,42 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.DuvidaActivity" />
         </activity>
-        <activity android:name=".views.UsuarioActivity"
+        <activity
+            android:name=".views.UsuarioActivity"
             android:parentActivityName=".views.MenuActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.MenuActivity" />
         </activity>
-        <activity android:name=".views.InfoUsuarioActivity"
+        <activity
+            android:name=".views.InfoUsuarioActivity"
             android:parentActivityName=".views.UsuarioActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.UsuarioActivity" />
         </activity>
-
+        <activity
+            android:name=".views.WebViewActivity"
+            android:parentActivityName=".views.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.MainActivity" />
+        </activity>
         <service
             android:name=".services.AdicionarAtividade"
-            android:exported="false"></service>
+            android:exported="false" />
         <service
             android:name=".services.AdicionarDuvida"
-            android:exported="false"></service>
+            android:exported="false" />
+        <receiver
+            android:name=".broadcast.MyReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED"/>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
