--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,13 +21,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:label">
-        <activity android:name=".views.MainActivity">
+        <activity android:name=".views.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".views.MainActivity"/>
         <activity
             android:name=".views.CadastroActivity"
             android:parentActivityName=".views.MainActivity">
@@ -51,10 +51,10 @@
         </activity>
         <activity
             android:name=".views.CadastroAdministrador"
-            android:parentActivityName=".views.CadastroActivity">
+            android:parentActivityName=".views.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".views.CadastroActivity" />
+                android:value=".views.MainActivity" />
         </activity>
         <activity
             android:name=".views.CadastroAtividade"
@@ -142,18 +142,22 @@
 
         <activity android:name=".views.ConfiguracaoActivity" />
         <activity android:name=".views.CadastroFuncionario2" />
-        <activity android:name=".views.AtividadesConcluidas"
+        <activity
+            android:name=".views.AtividadesConcluidas"
             android:parentActivityName=".views.TarefaActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.TarefaActivity" />
         </activity>
-        <activity android:name=".views.DuvidasConcluidas"
+        <activity
+            android:name=".views.DuvidasConcluidas"
             android:parentActivityName=".views.DuvidaActivity">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".views.DuvidaActivity" />
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.DuvidaActivity" />
         </activity>
+        <activity android:name=".views.Duvida" />
+        <activity android:name=".views.Atividade" />
     </application>
 
 </manifest>
